better css loadling

--- a/index.html
+++ b/index.html
@@ -90,10 +90,34 @@
         </section>
         <section class="row">
           <h6>Skills</h6>
-          <div id="skills"></div>
+          <div id="skills">
+            <ul>
+              <li class="skills-list">angularjs</li>
+              <li class="skills-list">python</li>
+              <li class="skills-list">javascript</li>
+              <li class="skills-list">django</li>
+              <li class="skills-list">django rest framework</li>
+              <li class="skills-list">css</li>
+              <li class="skills-list">html</li>
+              <li class="skills-list">gulp</li>
+              <li class="skills-list">webpack</li>
+              <li class="skills-list">browserify</li>
+              <li class="skills-list">npm</li>
+              <li class="skills-list">virtualenv</li>
+              <li class="skills-list">flask</li>
+              <li class="skills-list">git</li>
+              <li class="skills-list">mercurial</li>
+              <li class="skills-list">hapi.js</li>
+              <li class="skills-list">express</li>
+              <li class="skills-list">backbone</li>
+              <li class="skills-list">node.js</li>
+              <li class="skills-list">linux</li>
+              <li class="skills-list">macosx</li>
+              <li class="skills-list">reactjs</li>
+            </ul></div></div>
         </section>
     </div>
 
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="cv-bundle.js"></script>
   </body>
 </html>
