--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <meta name="author" content="Fritz van Deventer">
     <meta name="description" edit="fritzvd, python, javascript, frontend, developer, django, reactjs, angularjs">
 
-    <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id='game'></div>
+
+    <!-- //cdnjs.cloudflare.com/ajax/libs/pixi.js/3.0.11/pixi.min.js -->
+    <script type="text/javascript" src="./node_modules/pixi.js/bin/pixi.min.js"></script>
     <script type="text/javascript" src="bundle.js"></script>
+    <script></script>
   </body>
 </html>
