--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <ul>
         <li><a href="https://twitter.com/fritzvd" target="_blank">twitter</a></li>
         <li><a href="https://github.com/fritzvd" target="_blank">github</a></li>
-        <li><a href="https://blog.fritzvd.com/" target="_blank">blog</a></li>
+        <li><a href="http://blog.fritzvd.com/" target="_blank">blog</a></li>
         <li id="help-button">help?</li>
       </ul>
     </nav>
