--- a/cv.html
+++ b/cv.html
@@ -34,13 +34,18 @@
               ),
               and a web developer living in the Netherlands. I am proficient
               in a number of programming languages and environments and really
-              comfortable to doing both back-end  and front-end development with
-              a number of frameworks I like to optimize my tooling and workflow.
+              comfortable in doing both back-end and front-end development with
+              a number of frameworks. I like to optimize my tooling and workflow,
+              and have worked in different development environments with CI/CD,
+              docker or modern cloud infrastructure.
               Most of my working life has been in geographically software in the
               browser. As a result of which I am adept in combining data and
               data sources and working on a lot of different places and pieces of
               the software puzzle.
-
+            </p>
+            <p>
+              In the last 5 years I have been working as a lecturer at the HAN
+              University of Applied Sciences
             </p>
             <p>
               Python, JavaScript, HTML and CSS are the languages I am the most
