--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>fritzvd portphobia portfolio portfrolico</title>
 
     <!-- you don't need to keep this, but it's cool for stats! -->
