--- a/cv.html
+++ b/cv.html
@@ -32,8 +32,7 @@
                 <svg width="14" height="14" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1684 408q-67 98-162 167 1 14 1 42 0 130-38 259.5t-115.5 248.5-184.5 210.5-258 146-323 54.5q-271 0-496-145 35 4 78 4 225 0 401-138-105-2-188-64.5t-114-159.5q33 5 61 5 43 0 85-11-112-23-185.5-111.5t-73.5-205.5v-4q68 38 146 41-66-44-105-115t-39-154q0-88 44-163 121 149 294.5 238.5t371.5 99.5q-8-38-8-74 0-134 94.5-228.5t228.5-94.5q140 0 236 102 109-21 205-78-37 115-142 178 93-10 186-50z"/></svg></a>,
               <a title="github" href="https://github.com/fritzvd">
                 <svg width="14" height="14" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1664 896q0 251-146.5 451.5t-378.5 277.5q-27 5-39.5-7t-12.5-30v-211q0-97-52-142 57-6 102.5-18t94-39 81-66.5 53-105 20.5-150.5q0-121-79-206 37-91-8-204-28-9-81 11t-92 44l-38 24q-93-26-192-26t-192 26q-16-11-42.5-27t-83.5-38.5-86-13.5q-44 113-7 204-79 85-79 206 0 85 20.5 150t52.5 105 80.5 67 94 39 102.5 18q-40 36-49 103-21 10-45 15t-57 5-65.5-21.5-55.5-62.5q-19-32-48.5-52t-49.5-24l-20-3q-21 0-29 4.5t-5 11.5 9 14 13 12l7 5q22 10 43.5 38t31.5 51l10 23q13 38 44 61.5t67 30 69.5 7 55.5-3.5l23-4q0 38 .5 89t.5 54q0 18-13 30t-40 7q-232-77-378.5-277.5t-146.5-451.5q0-209 103-385.5t279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"/></svg></a>
-              ),
-              and a web developer living in the Netherlands. I am proficient
+              ). I am a musician and web developer living in the Netherlands. I am proficient
               in a number of programming languages and environments and really
               comfortable in doing both back-end and front-end development with
               a number of frameworks. I like to optimize my tooling and workflow,
@@ -41,9 +40,13 @@
               docker or modern cloud infrastructure.
             </p>
             <p>
-              In the last 5 years I have been working as a lecturer at the HAN
+              In the last 6 years I have been working as a lecturer at the HAN
               University of Applied Sciences teaching Software Development for
               the HBO-ICT program.
+            </p>
+            <p>
+
+            </p>
           </div>
 
         </section>
@@ -80,6 +83,11 @@
                   </td>
               </tr>
               <tr>
+                <td>2013-2016, 2022-present Lead Singer of Cheeses of Mexico</td>
+                <td>Most of the management, booking and administrative work are being taken care of by me.
+                  I sing, play guitar and do a lot of recording, producing and planning.</td>
+              </tr>
+              <tr>
                 <td>2013 – 2020<br>
                   fritzvd.com, independent contractor
                 </td>
@@ -97,10 +105,6 @@
               <tr>
                 <td>2015</td>
                 <td>In Utrecht I started and the JavaScript meetup that meets up bi-monthly with my co-host Christiaan Bemmel.</td>
-              </tr>
-              <tr>
-                <td>2013-2016 Lead Singer of Cheeses of Mexico</td>
-                <td>Most of the management, booking and administrative work are being taken care of by me. On top of that I am the front man, which also makes me the face of the band.</td>
               </tr>
               <tr>
                 <td>2012-2016<br>
