--- a/cv.html
+++ b/cv.html
@@ -98,7 +98,7 @@
                     <li>Organizing, hosting and speaking at JavaScript meetups in the Utrecht region</li>
                     <li>animations, scripting and modelling with 3d software Blender</li>
                     <li>producing a silk-screen printing of our Cheeses of Mexico EP</li>
-                    <li>creating games for the Nintendo Entertainment System</li>
+                    <li>creating a slideshow that runs on the Nintendo Entertainment System</li>
                     <li>creating a game that runs on Android/iOS,HTML,Windows, Linux and Mac</li>
                   </ul>
               </tr>
