--- a/cv.html
+++ b/cv.html
@@ -111,11 +111,13 @@
                   Nelen & Schuurmans, Software Developer
                 </td>
                 <td>
-                  Working on large scale applications (https://demo.lizard.net and
+                  Working on large scale geographic applications (https://demo.lizard.net and
                   https://3di.nu) with<br>
                   Python: Django, GDAL, Postgresql/ PostGIS.<br><br>
                   JavaScript frontend: angular.js, backbone.js, Leaflet.js, Openlayers. JavaScript backend: socket.io, node.js, hapi.js, express, command line tools.<br><br>
                   
+                  Developing REST API's in Python/Django. Doing data processing in Python / Numpy.
+
                   Levelling up the JavaScript skills of the company. Introduced JavaScript/CSS tooling, testing and package managers. Improved tooling for JavaScript deployment.<br><br>
                   
                   Organizing and giving internal technical talks on all kinds of subjects.<br><br>
