--- a/cv-nl.html
+++ b/cv-nl.html
@@ -31,9 +31,9 @@
               tot de bühne, van de directiezaal tot de kinderopvang.
             </p>
             </p>
-              In de afgelopen 7 jaar ben ik werkzaam geweest als docent HBO-ICT aan de HAN University
+              In de afgelopen 8 jaar ben ik werkzaam geweest als docent HBO-ICT aan de HAN University
               of Applied Sciences en heb ik mij voornamelijk bezig gehouden met het
-              lesgeven en het ontwikkelen van curriculum in de richting van Software Engineering.
+              lesgeven, coördineren van vakken en het ontwikkelen van curriculum in de richting van Software Engineering.
               Daarnaast heb ik altijd studenten met die extra aandacht nodig hebben begeleid in de rol 
               van studieloopbaanbegeleider.
             </p>
@@ -47,7 +47,7 @@
         </section>
 
         <section class="row">
-          <h6>Education</h6>
+          <h6>Opleiding</h6>
             2010 – 2012 MSc Geo Information Science – Wageningen University<br>
             2006 – 2010 BSc International Land and Water Management – Wageningen University<br>
             1999 – 2005 VWO (Similar to IB) Hermann Wesselink College<br><br>
